--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
     <h2> @Lists</h2>
 
     <h3> Unordered List</h3>
+    <p>THis list will not have bullets</p>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li> Item One</li>
         <li> Item two</li>
         <li> Item three</li>
     </ul>
 
     <h3> Unordered Inline List</h3>
-    <ul>
-        <li> Item One</li>
-        <li>  Item two</li>
-        <li>  Item three</li>
+    <ul class="list-non-bullet">
+        <li class="list-inline"> Item One</li>
+        <li class="list-inline">  Item two</li>
+        <li class="list-inline">  Item three</li>
     </ul>
 
     <h3>Order List</h3>
