--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 
     <h2> @Nav</h2>
 
-    <nav>
-        <div> Iam a Developer</div>
-        <ul>
-            <li> 
-                <a href=""> Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand"> Iam a Developer</div>
+        <ul class="list-non-bullet  nav-pills">
+            <li class="list-inline"> 
+                <a class="link" href=""> Home</a>
             </li>
-            <li>
-                <a href="">Products</a>
+            <li class=" list-non-bullet list-inline">
+                <a class="link" href="">Products</a>
         
-            </li>
-            <li>
-                <a href=""> About</a>
+            </li> 
+            <li class="list-inline">
+                <a class="link" href=""> About</a>
             </li>
         </ul>
     </nav>
@@ -96,24 +96,26 @@
     <hr>
 
     <h2> Header</h2>
-    <header>
-    <img src="images/hero.svg"/>
-    <h3> Heading inside the Hero</h3>
+    <header class="hero">
+    <img class="hero-img" src="images/hero.svg"/>
+    <h3 class="hero-heading"> Hi There!! <span class= heading-inverted>Lets write some code</span> </h3>
     </header>
 
     <hr>
 
     <h2> @Sections</h2>
 
-    <section>
+    <section class="section">
+    <div class="container container-center">
     <h3> Off White Section</h3>
-    <p> This will go from end to end with little margin on both sides</p>
+    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos magnam quibusdam, praesentium amet accusantium aliquid expedita eligendi vero eveniet ratione placeat optio deserunt aspernatur quam qui obcaecati modi dolorem hic molestiae accusamus. Voluptatum laboriosam perspiciatis eligendi sed ipsam, sint iure voluptatem iste ex praesentium fuga distinctio eveniet officiis facilis cumque.</p>
+    </div>
 
     </section>
 
-    <section>
+    <section class="ow">
         <h3> White Section</h3>
-        <p> This will go from end to end with little margin on both sides</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus recusandae dolorum facilis, eaque numquam quam. Consequuntur corrupti deserunt asperiores repellat veritatis. Quidem officia ullam natus, nemo laborum doloribus rem corrupti aliquid amet eos unde laudantium at vel dicta ducimus? Perferendis voluptatem magnam, illum temporibus officia tempora nesciunt ab odit dolore?</p>
     
     </section>
 
