CSS style sheet complete

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     <h2> @Footer</h2>
 
 
-    <footer>
-        <div> some small headings inside the footer</div>
-        <ul>
-            <li> Socialone</li>
-            <li>Socialtwo</li>
-            <li>Socialthree</li>
+    <footer class="footer">
+        <div class="footer-header"> some small headings inside the footer</div>
+        <ul class="list-non-bullet">
+            <li class="social-links list-inline"> <a  class="link" href=""> Social One</a></li>
+            <li class="social-links list-inline"> <a class="link" href=""> Social Two</a></li>
+            <li class="social-links list-inline"> <a class="link" href=""> Social Three</a></li>
         </ul>
 
     </footer>
